Add customs_value as dependency

--- a/tryton.cfg
+++ b/tryton.cfg
@@ -5,6 +5,7 @@ depends:
     sale_shipment_cost
     product_measurements
     stock_package
+    customs_value
 xml:
     party.xml
     shipment.xml
