--- a/tryton.cfg
+++ b/tryton.cfg
@@ -3,7 +3,7 @@ version=3.4.17.2
 depends:
     carrier
     sale_shipment_cost
-    product_measurements
+    product_variant_measurements
     stock_package
     customs_value
 xml:
